[package]
name = "libxl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.20.4"
chrono = "0.4"
lazy_static = "1.4"
regex = "1"
num-traits = "0.2.14"
ring = "0.16"
data-encoding = "2.3"