[package]
name = "dalamud"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxl = { path = "../libxl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
tracing = "0.1"
boolean-enums = { version = "0.3.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
zip = "0.5"
sha-1 = "0.9.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.26.0"
features = [
    "std"
    , "Win32_UI_Shell"
    , "Win32_Foundation"
    , "Win32_Globalization"
]

[dev-dependencies]
tokio = { version = "1.13.0", features = ["rt", "macros"] }
sysinfo = "0.20.4"
tracing-subscriber = "0.3.1"
