[package]
name = "ffxiv"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1"
boolean-enums = { version = "0.3.4", features = ["serde"] }
byteorder = "1.4"
base64 = "0.13"
libxl = { path = "../libxl" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.26.0"
features = [
    "std"
    , "Win32_Foundation"
    , "Win32_System_WindowsProgramming"
    , "Win32_Security_Authorization"
    , "Win32_System_Threading"
    , "Win32_System_SystemInformation"
    , "Win32_UI_WindowsAndMessaging"
]

[dev-dependencies]
sysinfo = "0.20.4"
tracing-subscriber = "0.3.1"