[package]
name = "libxl"
version = "0.0.1"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
data-encoding = { version = "2.3" }
lazy_static = { version = "1.4" }
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
num-traits = { version = "0.2.14" }
regex = { version = "1" }
reqwest = { version = "0.11.4", features = ["json"] }
ring = { version = "0.16" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0" }
sysinfo = { version = "0.20.4" }
