[package]
name = "libxl"
version = "0.0.1"
description = "xivlauncher-neo"
authors = ["Team Goat Place"]
license = "GPLv3"
repository = "https://github.com/goaaats/xivlauncher-neo"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.45" }
chrono = { version = "0.4", features = ["serde"] }
data-encoding = { version = "2.3" }
lazy_static = { version = "1.4" }
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
num-traits = { version = "0.2.14" }
regex = { version = "1" }
reqwest = { version = "0.11.4", features = ["json"] }
ring = { version = "0.16" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0" }
sysinfo = { version = "0.20.4" }
sys-locale = { version = "0.1.0" }

[dependencies.windows]
version = "0.27.0"
features = [
    "std",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
]
