[package]
name = "xlcmd"
version = "0.1.0"
edition = "2021"

[dependencies]
libxl = { path = "../libxl" }
tokio = { version = "1.12.0", features = ["full"] }
clap = { version = "=3.0.0-beta.5", git = "https://github.com/clap-rs/clap" }
indicatif = "0.16.2"
console = "0.15.0"
serde_json = "1.0.71"
dialoguer = "0.9.0"