[package]
name = "app"
version = "0.0.1"
description = "xivlauncher-neo"
authors = ["Team Goat Place"]
license = "GPLv3"
repository = "https://github.com/goaaats/xivlauncher-neo"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
dunce = { version = "1.0.2" }
log = { version = "0.4.14" }
log4rs = { version = "1.0.0", features = ["console_appender", "file_appender", "pattern_encoder"] }
parselnk = { version = "0.1" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
sys-locale = { version = "0.1.0" }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tokio = { version = "1.12.0", features = ["full"] }
libxl = { path = "../../libxl" }

[dependencies.windows]
version = "0.27.0"
features = [
    "std",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
